   * Remove ToD coloring and brightening of off-map background tiles
   * fix inconsistant highlighting of fog transitions
   * slightly bigger and multi-hex attack direction indicator, fixed
     incorrect scale update when zooming.
   * improve footsteps : better beginning, angles and end, reduce
     cpu cost, fix incorrect left-right sequences and clean some images
 * map editor:
   * the grid is scaled properly again and no longer shown in the offmap area
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Add an additional line below the minimap in the "Multiplayer->Create game"
     screen that displays the size of the selected map. (patch #776 by uso)
   * Add a tooltip with the experience modifier for the units XP display.
   * add an empty attack icon in attack dialog when needed (this also removes
     an error message, bug #9570)
   * better "choose attack direction using the last highlighted hex" on pack
     of units (bug #9649)
   * attack/move cursors and attack direction indicator are not used when
     observing (bug #9610)
   * 'help' and 'more' button in the title screen now also have a tooltip
     (bug #9618 patch #790)
   * added a hotkey for clearing the chat messages (patch #770)
   * fixed incorrect displayed reachable zone when moving next to an enemy
     in special ZoC cases (skirmish or lvl0)
   * Remove the "black stripes" of the enemy that we want to attack.
   * in tiny-gui, now the movement hint also displays the terrain defense.
   * the numbers of "show enemy moves" are now on top of fog and doesn't mix
     with those of the movement hint
   * display resistances against visible enemy weapons in the HP tooltip
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new tag [filter_radius] to allow greater control over radius expansion
     when using the standard location filter
   * fix a bug where containers could only be stored at the top-level