@@ -11,6 +11,7 @@ Version 1.3.6+svn:
       * Fixed bug in Anita's death event where Tallin speaks instead of her.
       * Fixed bug in 'Old Friend' where Rakshas' portrait doesn't appear.
       * Balancing and text changes in 'Old Friend'
+
   * Multiplayer
     * New map: Mokena Prairie.
     * Revised maps: Hamlets, Meteor Lake, 4p Hamlets.
@@ -34,6 +35,7 @@ Version 1.3.6+svn:
       end-of-turn ends the linger and takes you out.
     * The 'more' and 'help' button in the title screen now have a tooltip.
     * Added a hotkey for clearing the chat messages.
+    * Fixed the black corners on some maps.
 
   * Miscellaneous
     * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
