@@ -47,6 +47,9 @@ Version 1.3.6+svn:
      incorrect scale update when zooming.
    * improve footsteps : better beginning, angles and end, reduce
      cpu cost, fix incorrect left-right sequences and clean some images
+   * fixed the glitch which would occur on some maps in the top right
+     corner and bottom left corner, these tiles were rendered as void
+     instead of a normal terrain.
  * map editor:
    * the grid is scaled properly again and no longer shown in the offmap area
  * user interface:
